tests/sum13.txt
-- Tutorial step 13 (add the other operators)
sum = term (plus term @2add / minus term @2subtract)* end
term = number (times number @2multiply / over number @2divide)*
number = digit+ @number
plus = #operator '+' @
minus = #operator '-' @
times = #operator '*' @
over = #operator '/' @
digit = #digit '0..9'
end = #newline 13? 10 @
==========
2
..........
number 2
==========
42
..........
number 42
==========
2+40
..........
number 2
number 40
add
==========
2+40%
..........
Error in tests/sum13.txt, line 26: expecting digit, newline, operator
2+40%
    ^
==========
2+10+12+18
..........
number 2
number 10
add
number 12
add
number 18
add
==========
2-10+53-3
..........
number 2
number 10
subtract
number 53
add
number 3
subtract
==========
2+
..........
Error in tests/sum13.txt, line 52: expecting digit
2+
  ^
==========
5*8+12/6
..........
number 5
number 8
multiply
number 12
number 6
divide
add
